# xdia

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
include/dia/: dia2.h
include/wine/: msxml.h  oaidl.h  objidl.h  objidlbase.h  oleidl.h  propidl.h  servprov.h  unknwn.h  urlmon.h  winbase.h  winnt.h  wtypes.h
pyxdia/: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
pyxdia/pyxdia/: __init__.py  __main__.py  pdb.py
pyxdia/tests/: test_cli.py  test_pdb.py
scripts/: release.sh
src/: CMakeLists.txt
src/DIA2Dump/: DIA2Dump.cpp  DIA2Dump.h  PrintSymbol.cpp  PrintSymbol.h  main.c  objbase.c  regs.cpp  regs.h  stdafx.h
src/pe-loader/: common.h  pe-loader.c  uuids.h  wc.c
src/pe-loader/winapi/: advapi32.c  kernel32.c  ole32.c  oleaut32.c  shlwapi.c
src/xdia/: CMakeLists.txt  PrintSymbol.cpp  PrintSymbol.h  main.cpp  regs.cpp  regs.h  util.cpp  util.h  xdia.LICENSE.txt
src/xdia-loader/: main.c  xdialdr.LICENSE.txt
tests/: hello-wdm.sys
