[project]
name = "pyxdia"
description = "Extract useful program information from PDB files"
dynamic = [ "version" ]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mborgerson/xdia"

[tool.setuptools]
packages = ["pyxdia"]
dynamic = { version = { attr = "pyxdia.__version__.__version__" } }
