[metadata]
name = pyxdia
version = attr: pyxdia.__version__.__version__
description = pyxdia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mborgerson/xdia
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    pyxdia
python_requires = >=3.10

[options.extras_require]
docs =
    furo
    ipython
    myst-parser
    sphinx
    sphinx-autodoc-typehints
